--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
 
-    <h1>🌡️ Termostat Inteligent</h1>
+    <h1>🌡️ Termometru Inteligent</h1>
     <div class="status-bar" id="last-update">Se conectează la server...</div>
 
     <div class="dashboard-container">
